# py-ssg-tools

./: .gitignore  README.md  pyproject.toml
src/py_ssg_tools/: cli.py  fonts.py  icons.py  screenshots.py
